--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ permalink: ':title/'
 plugins:
   - jekyll-admin
   - jekyll-paginate
+  - jekyll-redirect-from
+  - jekyll-redirect_to
 paginate: 7
 paginate_path: "/page/:num"
 include:
